# Homework-Shen-Quanzhu

./: README.md
PnP/: CMakeLists.txt  README.md  solvePnP.py
PnP/src/: SolvePnP.cpp
PnPread/: CMakeLists.txt
PnPread/src/: read.cpp
Task 1/src/: Task1.cpp
Task 2/: CMakeLists.txt
Task 3/src/: Task3.cpp
YOLO/: YOLOtest.py  codeRun.ipynb  envCheck.py
招新考核/: README.md
招新考核/Task 1/: CMakeLists.txt
招新考核/Task 2/src/: Task2.cpp
招新考核/Task 3/: CMakeLists.txt
